// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-iCoGMd hFJToB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 cwwoTn FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 gXHnix"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 zyHQr"
            disabled=""
            type="file"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-iCoGMd hFJToB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 SMFjn FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 gXHnix"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 gHAWHi"
            type="file"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-iCoGMd hFJToB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz"
    >
      <span
        class="StyledText-sc-1sadyjn-0 bmnpwp"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 SMFjn FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 gXHnix"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 gHAWHi"
            type="file"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-iCoGMd hFJToB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz"
    >
      <label
        class="StyledText-sc-1sadyjn-0 ZJQGZ"
        for="input"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 SMFjn FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 gXHnix"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 gHAWHi"
            id="input"
            type="file"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-iCoGMd hFJToB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 HhzTD FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 gXHnix"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 gHAWHi"
            type="file"
            value=""
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 fnpEr"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`FileInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-iCoGMd hFJToB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 SMFjn FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 gXHnix"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 gHAWHi"
            type="file"
            value=""
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 bTUvUa"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
